# omniscope

./: .gitignore  BOOKSHELF_AI_PLAN.md  BOOKSHELF_VIM_MOTIONS.md  CLAUDE.md  Cargo.toml  GEMINI.md  Implementing Key Hints.md  Omniscope_AI_SYSTEM.md  README.md  demo.cast  project_status.md
.claude/: config.json
AI plans/: OMNISCOPE_FOLDER_IMPL_PLAN.md  OMNISCOPE_FOLDER_SYSTEM.md  OMNISCOPE_MASTER_PLAN.md  OMNISCOPE_SCIENCE_IMPL_PLAN.md  OMNISCOPE_UI_DESIGN_PLAN.md  Omniscope_VIM_MOTIONS.md
AI plans/SCIENCE/: Omniscope_SCIENCE.md
AI plans/Vim/: VIM_MOTIONS_IMPL_PLAN.md
AI plans/memory/: OMNISCOPE_FOLDER_SYSTEM.md  OMNISCOPE_STORAGE.md
crates/omniscope-ai/: Cargo.toml
crates/omniscope-ai/src/: lib.rs
crates/omniscope-cli/: Cargo.toml
crates/omniscope-cli/src/: main.rs
crates/omniscope-core/: Cargo.toml
crates/omniscope-core/src/: config.rs  error.rs  file_import.rs  frecency.rs  lib.rs  search.rs  search_dsl.rs  undo.rs  viewer.rs
crates/omniscope-core/src/models/: actions.rs  ai_types.rs  book.rs  citation.rs  folder.rs  folder_tree.rs  identifiers.rs  library.rs  library_map.rs  manifest.rs  mod.rs  open_access.rs  publication.rs  tag.rs  user_profile.rs
crates/omniscope-core/src/models/book/: ai.rs  file.rs  metadata.rs  mod.rs  organization.rs  web.rs
crates/omniscope-core/src/models/folder/: mod.rs
crates/omniscope-core/src/storage/: database.rs  folders.rs  init.rs  json_cards.rs  library_root.rs  mod.rs  scan.rs
crates/omniscope-core/src/storage/database/: connection.rs  error.rs  mod.rs  schema.rs
crates/omniscope-core/src/storage/database/migrations/: mod.rs  v1_initial.rs  v2_doi_arxiv.rs  v3_disk_path.rs
crates/omniscope-core/src/storage/queries/: book_search.rs  frecency.rs  mod.rs  stats.rs
crates/omniscope-core/src/storage/repositories/: book_repository.rs  folder_repository.rs  library_repository.rs  mod.rs  tag_repository.rs
crates/omniscope-core/src/sync/: folder_ops.rs  folder_sync.rs  mod.rs  watcher.rs
crates/omniscope-ffi/: Cargo.toml
crates/omniscope-ffi/src/: lib.rs
crates/omniscope-science/: Cargo.toml
crates/omniscope-science/src/: config.rs  dedup.rs  error.rs  http.rs  lib.rs  types.rs
crates/omniscope-science/src/arxiv/: add.rs  client.rs  mod.rs  parser.rs  types.rs  updater.rs
crates/omniscope-science/src/enrichment/: merge.rs  mod.rs  pipeline.rs
crates/omniscope-science/src/formats/: bibtex.rs  csl.rs  mod.rs  ris.rs
crates/omniscope-science/src/identifiers/: arxiv.rs  doi.rs  extract.rs  isbn.rs  mod.rs
crates/omniscope-science/src/references/: extractor.rs  mod.rs  parser.rs  resolver.rs
crates/omniscope-science/src/sources/: annas_archive.rs  core_ac.rs  crossref.rs  mod.rs  openalex.rs  openlibrary.rs  scihub.rs  semantic_scholar.rs  unpaywall.rs
crates/omniscope-science/src/sources/fixtures/: annas_md5_fixture.html  annas_search_fixture.html  scihub_page_fixture.html
crates/omniscope-server/: Cargo.toml
crates/omniscope-server/src/: lib.rs
crates/omniscope-tui/: Cargo.toml
crates/omniscope-tui/src/: app.rs  event.rs  lib.rs  popup.rs  ui.rs
crates/omniscope-tui/src/app/: async_tasks.rs  books.rs  citation_graph.rs  find_download.rs  mod.rs  navigation.rs  references.rs  science.rs  sidebar.rs  vim.rs
crates/omniscope-tui/src/command/: executor.rs  mod.rs  parser.rs
crates/omniscope-tui/src/keys/: easy_motion.rs  find_char.rs  g_commands.rs  hints.rs  jump_list.rs  mod.rs  motions.rs  operator.rs  pending.rs  popup_keys.rs  tests.rs  text_objects.rs  visual.rs  z_commands.rs
crates/omniscope-tui/src/keys/core/: mod.rs  motions.rs  operator.rs  text_objects.rs
crates/omniscope-tui/src/keys/ext/: easy_motion.rs  find_char.rs  g_commands.rs  jump_list.rs  mod.rs  science_bindings.rs  sort.rs  z_commands.rs
crates/omniscope-tui/src/keys/modes/: citation_graph.rs  command_mode.rs  find_download.rs  folder.rs  mod.rs  normal.rs  pending.rs  references.rs  search.rs  sync.rs  visual.rs
crates/omniscope-tui/src/keys/ui/: hints.rs  macro_recorder.rs  mod.rs  popup_keys.rs
crates/omniscope-tui/src/panels/: article_card.rs  citation_graph.rs  find_download.rs  mod.rs  references.rs
crates/omniscope-tui/src/theme/: mod.rs
crates/omniscope-tui/src/ui/: mod.rs  panels.rs  popups.rs
crates/omniscope-tui/src/ui/layout/: mod.rs
crates/omniscope-tui/src/ui/overlays/: help.rs  marks.rs  mod.rs  registers.rs  telescope.rs
crates/omniscope-tui/src/ui/panels/: ai_panel.rs  center.rs  citation_graph.rs  cmdline.rs  find_download.rs  left.rs  mod.rs  quickfix.rs  references.rs  right.rs  statusbar.rs  sync.rs
docs/: Library_Management_and_Storage.md  Vim guide.md  problem_storage.md
