[workspace]
resolver = "2"
members = [
    "crates/omniscope-core",
    "crates/omniscope-tui",
    "crates/omniscope-cli",
    "crates/omniscope-ai",
    "crates/omniscope-science",
    "crates/omniscope-server",
    "crates/omniscope-ffi",
]

[workspace.package]
version = "0.1.0-alpha"
edition = "2024"
license = "MIT"
authors = ["papayka"]

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Identifiers & time
uuid = { version = "1.1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
ulid = { version = "1", features = ["serde"] }

# Database
rusqlite = { version = "0.32", features = ["bundled", "serde_json", "chrono"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Async
tokio = { version = "1", features = ["full"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# CLI
clap = { version = "4", features = ["derive"] }

# System paths
dirs = "6"

# Internal crates
omniscope-core = { path = "crates/omniscope-core" }
omniscope-tui = { path = "crates/omniscope-tui" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dev]
opt-level = 1
