[package]
name = "omniscope-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI binary for Omniscope book manager"

[[bin]]
name = "omniscope"
path = "src/main.rs"

[dependencies]
omniscope-core = { workspace = true }
omniscope-tui = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
