[package]
name = "omniscope-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for Omniscope book manager — models, storage, config"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
ulid = { workspace = true }
nucleo-matcher = "0.3"
open = "5"

[dev-dependencies]
tempfile = "3"
