[package]
name = "omniscope-science"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
omniscope-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = "0.1"

# HTTP
reqwest = { version = "0.12", features = ["json", "gzip", "stream"] }
async-trait = "0.1"

# XML parsing (arXiv Atom feed)
quick-xml = { version = "0.37", features = ["serialize"] }

# HTML parsing (Anna's Archive, Sci-Hub)
scraper = "0.22"

# Regex
regex = "1"
once_cell = "1"
dirs = { workspace = true }

[dev-dependencies]
mockito = "1"
tokio = { workspace = true }
