[package]
name = "omniscope-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "TUI interface for Omniscope book manager"

[dependencies]
omniscope-core = { workspace = true }
omniscope-science = { path = "../omniscope-science" }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dirs.workspace = true
arboard = "3.6.1"
regex = "1.12.3"

[dev-dependencies]
tempfile = "3.25.0"
